Started converting the css to better colors.

--- a/www/index.html
+++ b/www/index.html
@@ -18,12 +18,13 @@
   <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
   <script>
     // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyDLFf4Fa2fq36PCS_sbpLAvVwwt4aW0O_U",
-      authDomain: "fireline-messenger.firebaseapp.com",
-      databaseURL: "https://fireline-messenger.firebaseio.com",
-      storageBucket: "fireline-messenger.appspot.com",
-    };
+   var config = {
+    apiKey: "AIzaSyBmLX7D4hPrgqf8pQlJI1OUBYiJTD5e-6w",
+    authDomain: "test-ecbbb.firebaseapp.com",
+    databaseURL: "https://test-ecbbb.firebaseio.com",
+    storageBucket: "test-ecbbb.appspot.com",
+    messagingSenderId: "280761092193"
+  };
     firebase.initializeApp(config);
   </script>
   <!-- Login -->
